[package]
name = "mentat_transaction"
version = "0.0.1"
workspace = ".."

[dependencies]
failure = "0.1.1"
failure_derive = "0.1.1"
futures = "0.1"
hyper = "0.11"
log = "0.4"
tokio-core = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_cbor = "0.8.2"
serde_derive = "1.0"
lazy_static = "0.2"
uuid = { version = "0.5", features = ["v4", "serde"] }

[dependencies.edn]
path = "../edn"

[dependencies.mentat_core]
path = "../core"

[dependencies.mentat_db]
path = "../db"

[dependencies.mentat_sql]
path = "../sql"

[dependencies.mentat_query]
path = "../query"

[dependencies.mentat_query_algebrizer]
path = "../query-algebrizer"

[dependencies.mentat_query_projector]
path = "../query-projector"

[dependencies.mentat_query_pull]
path = "../query-pull"

[dependencies.mentat_query_sql]
path = "../query-sql"

[dependencies.mentat_query_translator]
path = "../query-translator"

[dependencies.rusqlite]
version = "0.13"
features = ["limits"]
